--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -99,28 +99,38 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZh-IJ-D6a">
-                                <rect key="frame" x="20" y="150" width="374" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lMS-yr-Kgv">
-                                <rect key="frame" x="20" y="192" width="374" height="670"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fFz-P3-Fxb">
+                                <rect key="frame" x="20" y="150" width="374" height="712"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="A5G-jp-5q1">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
+                                        <segments>
+                                            <segment title="☹️"/>
+                                            <segment title="😐"/>
+                                            <segment title="🙂"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kZh-IJ-D6a">
+                                        <rect key="frame" x="0.0" y="39" width="374" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="lMS-yr-Kgv">
+                                        <rect key="frame" x="0.0" y="81" width="374" height="631"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.8689890125570775" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="leading" secondItem="hqI-4l-v99" secondAttribute="leading" constant="20" id="0qk-c8-4Vt"/>
-                            <constraint firstItem="kZh-IJ-D6a" firstAttribute="top" secondItem="hqI-4l-v99" secondAttribute="top" constant="10" id="2O9-Jk-IiP"/>
-                            <constraint firstItem="hqI-4l-v99" firstAttribute="trailing" secondItem="kZh-IJ-D6a" secondAttribute="trailing" constant="20" id="F9g-Ay-V35"/>
-                            <constraint firstItem="hqI-4l-v99" firstAttribute="trailing" secondItem="lMS-yr-Kgv" secondAttribute="trailing" constant="20" id="J9G-kL-uWB"/>
-                            <constraint firstItem="kZh-IJ-D6a" firstAttribute="leading" secondItem="hqI-4l-v99" secondAttribute="leading" constant="20" id="W4Z-qp-o8G"/>
-                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="bottom" secondItem="hqI-4l-v99" secondAttribute="bottom" id="gr6-cF-OAL"/>
-                            <constraint firstItem="lMS-yr-Kgv" firstAttribute="top" secondItem="kZh-IJ-D6a" secondAttribute="bottom" constant="8" id="zNz-5c-ajk"/>
+                            <constraint firstItem="fFz-P3-Fxb" firstAttribute="leading" secondItem="hqI-4l-v99" secondAttribute="leading" constant="20" id="KLJ-r0-EJH"/>
+                            <constraint firstItem="fFz-P3-Fxb" firstAttribute="bottom" secondItem="hqI-4l-v99" secondAttribute="bottom" id="UEO-ZN-1eP"/>
+                            <constraint firstItem="fFz-P3-Fxb" firstAttribute="top" secondItem="hqI-4l-v99" secondAttribute="top" constant="10" id="mzQ-i1-0jF"/>
+                            <constraint firstItem="hqI-4l-v99" firstAttribute="trailing" secondItem="fFz-P3-Fxb" secondAttribute="trailing" constant="20" id="z7c-Sv-tka"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="hqI-4l-v99"/>
                     </view>
@@ -134,6 +144,7 @@
                     <connections>
                         <outlet property="entryTextField" destination="kZh-IJ-D6a" id="203-E9-9EZ"/>
                         <outlet property="entryTextView" destination="lMS-yr-Kgv" id="gGy-jA-ock"/>
+                        <outlet property="moodSegmentControl" destination="A5G-jp-5q1" id="MYy-Dh-jme"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VM6-jh-OAy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
