--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -87,23 +87,37 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0BZ-7I-zUh">
-                                <rect key="frame" x="20" y="96" width="374" height="49"/>
+                                <rect key="frame" x="20" y="154" width="374" height="49"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="9Fa-jU-OvI">
-                                <rect key="frame" x="20" y="153" width="374" height="660"/>
+                                <rect key="frame" x="20" y="211" width="374" height="602"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ahH-Al-acM">
+                                <rect key="frame" x="0.0" y="96" width="414" height="51"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="LYp-ZZ-H8Y"/>
+                                </constraints>
+                                <segments>
+                                    <segment title="🥳"/>
+                                    <segment title="🤨"/>
+                                    <segment title="🤬"/>
+                                </segments>
+                            </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
                             <constraint firstItem="dX5-rS-frT" firstAttribute="trailing" secondItem="0BZ-7I-zUh" secondAttribute="trailing" constant="20" id="4jg-nf-OLA"/>
+                            <constraint firstItem="dX5-rS-frT" firstAttribute="trailing" secondItem="ahH-Al-acM" secondAttribute="trailing" id="5is-VM-GXL"/>
                             <constraint firstItem="9Fa-jU-OvI" firstAttribute="leading" secondItem="dX5-rS-frT" secondAttribute="leading" constant="20" id="D0e-pJ-5rC"/>
-                            <constraint firstItem="0BZ-7I-zUh" firstAttribute="top" secondItem="dX5-rS-frT" secondAttribute="top" constant="8" id="q47-eG-L43"/>
+                            <constraint firstItem="0BZ-7I-zUh" firstAttribute="top" secondItem="ahH-Al-acM" secondAttribute="bottom" constant="8" id="FiW-P7-gqZ"/>
+                            <constraint firstItem="ahH-Al-acM" firstAttribute="leading" secondItem="dX5-rS-frT" secondAttribute="leading" id="dyX-xF-s7v"/>
+                            <constraint firstItem="ahH-Al-acM" firstAttribute="top" secondItem="dX5-rS-frT" secondAttribute="top" constant="8" id="lYY-In-32J"/>
                             <constraint firstItem="9Fa-jU-OvI" firstAttribute="top" secondItem="0BZ-7I-zUh" secondAttribute="bottom" constant="8" id="qWx-AE-oU0"/>
                             <constraint firstItem="9Fa-jU-OvI" firstAttribute="bottom" secondItem="dX5-rS-frT" secondAttribute="bottom" id="qXy-32-zEi"/>
                             <constraint firstItem="dX5-rS-frT" firstAttribute="trailing" secondItem="9Fa-jU-OvI" secondAttribute="trailing" constant="20" id="woK-4A-puy"/>
@@ -122,6 +136,7 @@
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="descriptionTextField" destination="9Fa-jU-OvI" id="XPu-3O-9M9"/>
+                        <outlet property="moodSegmentedControl" destination="ahH-Al-acM" id="55Z-uk-z7o"/>
                         <outlet property="titleTextField" destination="0BZ-7I-zUh" id="8tk-an-QFl"/>
                     </connections>
                 </viewController>
