--- a/JournalIOS14/Journal/Base.lproj/Main.storyboard
+++ b/JournalIOS14/Journal/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <scene sceneID="gQG-qj-o8x">
             <objects>
                 <tableViewController id="6HI-Df-HKK" customClass="EntriesTableViewController" customModule="Journal" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Kag-Ik-dAD">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="78" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Kag-Ik-dAD">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
@@ -24,7 +24,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="78"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C7S-OT-XXm">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="Entry Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C7S-OT-XXm">
                                             <rect key="frame" x="20" y="11" width="105.5" height="27"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
                                             <nil key="textColor"/>
@@ -36,8 +36,8 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCg-so-T7p">
-                                            <rect key="frame" x="361" y="11" width="33" height="20"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iCg-so-T7p">
+                                            <rect key="frame" x="360.5" y="11" width="33.5" height="20"/>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCallout"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -81,6 +81,7 @@
         <!--Navigation Controller-->
         <scene sceneID="q7k-Z6-uRV">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="1gU-Cb-yiG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <navigationController id="0uW-hM-vgo" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1Gf-sZ-t05">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -90,7 +91,6 @@
                         <segue destination="xTF-nX-xT1" kind="relationship" relationship="rootViewController" id="4tz-Rz-3yP"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="1gU-Cb-yiG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="851" y="-402"/>
         </scene>
@@ -110,8 +110,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ota-yU-uPr">
+                                        <rect key="frame" x="0.0" y="42" width="382" height="32"/>
+                                        <segments>
+                                            <segment title="🤢"/>
+                                            <segment title="😐"/>
+                                            <segment title="🤠"/>
+                                        </segments>
+                                    </segmentedControl>
                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Ozg-8O-gs2">
-                                        <rect key="frame" x="0.0" y="42" width="382" height="640"/>
+                                        <rect key="frame" x="0.0" y="81" width="382" height="601"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -129,9 +137,16 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ok3-tf-BU5"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Create Entry" id="m7O-Ja-x7J"/>
+                    <navigationItem key="navigationItem" title="Create Entry" id="m7O-Ja-x7J">
+                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="FXO-WV-C0K">
+                            <connections>
+                                <action selector="saveTapped:" destination="xTF-nX-xT1" id="n9u-Ca-bh7"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="bodyTV" destination="Ozg-8O-gs2" id="HCv-fk-fFE"/>
+                        <outlet property="moodSC" destination="ota-yU-uPr" id="rxz-Pq-iSm"/>
                         <outlet property="titleTF" destination="Ozb-cU-5NJ" id="hY6-6W-cbg"/>
                     </connections>
                 </viewController>
