--- a/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Storyboards/Base.lproj/Main.storyboard
@@ -16,12 +16,20 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WkM-O5-nfP">
-                                <rect key="frame" x="16" y="104" width="382" height="34"/>
+                                <rect key="frame" x="16" y="88" width="382" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="qCQ-6P-bK2">
+                                <rect key="frame" x="16" y="130" width="382" height="32"/>
+                                <segments>
+                                    <segment title="💩"/>
+                                    <segment title="😅"/>
+                                    <segment title="🤩"/>
+                                </segments>
+                            </segmentedControl>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WAv-tS-G9A">
-                                <rect key="frame" x="16" y="146" width="382" height="112"/>
+                                <rect key="frame" x="16" y="169" width="382" height="701"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -30,13 +38,17 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="WAv-tS-G9A" firstAttribute="top" secondItem="WkM-O5-nfP" secondAttribute="bottom" constant="8" symbolic="YES" id="5Ny-5B-xR4"/>
-                            <constraint firstItem="PRP-VD-ETl" firstAttribute="trailing" secondItem="WkM-O5-nfP" secondAttribute="trailing" constant="16" id="7uX-at-RK8"/>
-                            <constraint firstItem="PRP-VD-ETl" firstAttribute="trailing" secondItem="WAv-tS-G9A" secondAttribute="trailing" constant="16" id="LqW-GP-S2D"/>
-                            <constraint firstItem="WkM-O5-nfP" firstAttribute="top" secondItem="PRP-VD-ETl" secondAttribute="top" constant="16" id="eip-fV-koc"/>
-                            <constraint firstItem="PRP-VD-ETl" firstAttribute="bottom" secondItem="WAv-tS-G9A" secondAttribute="bottom" constant="604" id="p1N-KZ-pKt"/>
-                            <constraint firstItem="WkM-O5-nfP" firstAttribute="leading" secondItem="PRP-VD-ETl" secondAttribute="leading" constant="16" id="uG1-Hn-dZW"/>
-                            <constraint firstItem="WAv-tS-G9A" firstAttribute="leading" secondItem="PRP-VD-ETl" secondAttribute="leading" constant="16" id="wOl-mP-xIl"/>
+                            <constraint firstItem="qCQ-6P-bK2" firstAttribute="top" secondItem="WkM-O5-nfP" secondAttribute="bottom" constant="8" id="CVQ-oN-UD1"/>
+                            <constraint firstItem="WAv-tS-G9A" firstAttribute="leading" secondItem="PRP-VD-ETl" secondAttribute="leading" constant="16" id="Ee9-WM-1zl"/>
+                            <constraint firstItem="WkM-O5-nfP" firstAttribute="leading" secondItem="PRP-VD-ETl" secondAttribute="leading" constant="16" id="HXI-Gh-b3w"/>
+                            <constraint firstItem="WAv-tS-G9A" firstAttribute="top" secondItem="qCQ-6P-bK2" secondAttribute="bottom" constant="8" id="NVh-7v-Zhx"/>
+                            <constraint firstItem="PRP-VD-ETl" firstAttribute="trailing" secondItem="WkM-O5-nfP" secondAttribute="trailing" constant="16" id="OxG-ja-sO6"/>
+                            <constraint firstItem="PRP-VD-ETl" firstAttribute="trailing" secondItem="WAv-tS-G9A" secondAttribute="trailing" constant="16" id="Qba-4D-joQ"/>
+                            <constraint firstItem="PRP-VD-ETl" firstAttribute="trailing" secondItem="qCQ-6P-bK2" secondAttribute="trailing" constant="16" id="SW3-NP-VTk"/>
+                            <constraint firstItem="WkM-O5-nfP" firstAttribute="top" secondItem="PRP-VD-ETl" secondAttribute="top" id="WwO-7X-jfV"/>
+                            <constraint firstItem="WAv-tS-G9A" firstAttribute="bottom" secondItem="PRP-VD-ETl" secondAttribute="bottom" constant="8" id="fDj-yJ-cfq"/>
+                            <constraint firstItem="qCQ-6P-bK2" firstAttribute="leading" secondItem="PRP-VD-ETl" secondAttribute="leading" constant="16" id="i5G-xH-irR"/>
+                            <constraint firstItem="WAv-tS-G9A" firstAttribute="top" secondItem="qCQ-6P-bK2" secondAttribute="bottom" constant="8" id="ryh-pZ-onV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PRP-VD-ETl"/>
                     </view>
@@ -49,12 +61,13 @@
                     </navigationItem>
                     <connections>
                         <outlet property="entryTextView" destination="WAv-tS-G9A" id="mW1-Hz-oJI"/>
+                        <outlet property="moodController" destination="qCQ-6P-bK2" id="GSe-Oa-lUW"/>
                         <outlet property="titleTextField" destination="WkM-O5-nfP" id="vyk-u0-xyV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Iun-LM-gf5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1996" y="56"/>
+            <point key="canvasLocation" x="1995.6521739130437" y="55.580357142857139"/>
         </scene>
         <!--Journal-->
         <scene sceneID="h7N-bK-3P4">
