--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -98,19 +98,20 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="ahH-Al-acM">
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" segmentControlStyle="plain" selectedSegmentIndex="1" translatesAutoresizingMaskIntoConstraints="NO" id="ahH-Al-acM">
                                 <rect key="frame" x="0.0" y="96" width="414" height="51"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="LYp-ZZ-H8Y"/>
                                 </constraints>
                                 <segments>
-                                    <segment title="🥳"/>
-                                    <segment title="🤨"/>
                                     <segment title="🤬"/>
+                                    <segment title="🤨"/>
+                                    <segment title="🥳"/>
                                 </segments>
                             </segmentedControl>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.34963613013698636" green="0.66079060901995956" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="dX5-rS-frT" firstAttribute="trailing" secondItem="0BZ-7I-zUh" secondAttribute="trailing" constant="20" id="4jg-nf-OLA"/>
                             <constraint firstItem="dX5-rS-frT" firstAttribute="trailing" secondItem="ahH-Al-acM" secondAttribute="trailing" id="5is-VM-GXL"/>
