--- a/JournalCoreData/JournalCoreData/Resources/Base.lproj/Main.storyboard
+++ b/JournalCoreData/JournalCoreData/Resources/Base.lproj/Main.storyboard
@@ -85,39 +85,50 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XRe-Qs-C9d">
-                                <rect key="frame" x="20" y="224" width="374" height="311"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="311" id="kgc-Fx-tCs"/>
-                                </constraints>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                        <integer key="value" value="8"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
-                            </textView>
-                            <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t5b-1i-aia">
-                                <rect key="frame" x="20" y="160" width="374" height="44"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="SxL-yM-3HV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="24" translatesAutoresizingMaskIntoConstraints="NO" id="RCN-yA-uMZ">
+                                <rect key="frame" x="20" y="160" width="374" height="642"/>
+                                <subviews>
+                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="eDZ-Qx-xqc">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="41"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="40" id="bYK-RE-Lju"/>
+                                        </constraints>
+                                        <segments>
+                                            <segment title="🙁"/>
+                                            <segment title="😐"/>
+                                            <segment title="😀"/>
+                                        </segments>
+                                    </segmentedControl>
+                                    <textField contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a title:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="t5b-1i-aia">
+                                        <rect key="frame" x="0.0" y="64" width="374" height="44"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="44" id="ndA-jz-c6f"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="XRe-Qs-C9d">
+                                        <rect key="frame" x="0.0" y="132" width="374" height="510"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </textView>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="0.95184075342465757" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="2gf-Hq-saF" firstAttribute="trailing" secondItem="XRe-Qs-C9d" secondAttribute="trailing" constant="20" id="36R-gW-0fQ"/>
-                            <constraint firstItem="XRe-Qs-C9d" firstAttribute="leading" secondItem="2gf-Hq-saF" secondAttribute="leading" constant="20" id="4WD-nb-eZG"/>
-                            <constraint firstItem="2gf-Hq-saF" firstAttribute="trailing" secondItem="t5b-1i-aia" secondAttribute="trailing" constant="20" id="5Px-Cy-PfM"/>
-                            <constraint firstItem="t5b-1i-aia" firstAttribute="top" secondItem="2gf-Hq-saF" secondAttribute="top" constant="20" id="Fno-Ug-5KD"/>
-                            <constraint firstItem="t5b-1i-aia" firstAttribute="leading" secondItem="2gf-Hq-saF" secondAttribute="leading" constant="20" id="cAp-1X-awp"/>
-                            <constraint firstItem="XRe-Qs-C9d" firstAttribute="top" secondItem="t5b-1i-aia" secondAttribute="bottom" constant="20" id="ltJ-in-VCK"/>
+                            <constraint firstItem="RCN-yA-uMZ" firstAttribute="top" secondItem="2gf-Hq-saF" secondAttribute="top" constant="20" id="2xo-3P-g10"/>
+                            <constraint firstItem="2gf-Hq-saF" firstAttribute="bottom" secondItem="RCN-yA-uMZ" secondAttribute="bottom" constant="60" id="3Xf-1a-lUU"/>
+                            <constraint firstItem="RCN-yA-uMZ" firstAttribute="leading" secondItem="2gf-Hq-saF" secondAttribute="leading" constant="20" id="4hf-OM-xVY"/>
+                            <constraint firstItem="2gf-Hq-saF" firstAttribute="trailing" secondItem="RCN-yA-uMZ" secondAttribute="trailing" constant="20" id="eYc-kU-uHE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="2gf-Hq-saF"/>
                     </view>
@@ -130,6 +141,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="bodyTextView" destination="XRe-Qs-C9d" id="WfY-tF-raC"/>
+                        <outlet property="moodSegmentedControl" destination="eDZ-Qx-xqc" id="J8l-Nt-hKw"/>
                         <outlet property="titleTextField" destination="t5b-1i-aia" id="YO5-of-cth"/>
                     </connections>
                 </viewController>
